Show minimized thumbnail on download notification.

When an image is downloaded, download notification should show minimized
thumbnail on the right when collapsed, just like screenshot notification.

For the explanation with a screenshot, see the bug.

TEST=manual
BUG=766900

Change-Id: Id9ab63cb5c77fede9a9fb9502232c300c22a94a9
Reviewed-on: https://chromium-review.googlesource.com/674464
Reviewed-by: Min Qin <qinmin@chromium.org>
Commit-Queue: Tetsui Ohkubo <tetsui@chromium.org>
Cr-Commit-Position: refs/heads/master@{#503639}
Former-commit-id: 7476f2266ba9c16b0517569e0b9518d9b914c18c